welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: value unary_! is not a member of Unit
  while (!fin()){
         ^DwarfCode:3: error: too many arguments for method gauche: ()Unit
    gauche(2)
          ^DwarfCode:8: error: too many arguments for method gauche: ()Unit
    gauche(2)
          ^DwarfCode:17: error: too many arguments for method gauche: ()Unit
    gauche(2)
          ^DwarfCode:23: error: too many arguments for method gauche: ()Unit
    gauche(2)
          ^DwarfCode:24: error: value unary_! is not a member of Unit
    while (!fin()){
           ^DwarfCode:36: error: not found: value Direction
  if (getDirection()==Direction.est){
                      ^DwarfCode:38: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^DwarfCode:38: warning: enclosing method fin has result type Unit: return value discarded
      return true
      ^DwarfCode:39: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    } else return false
                  ^DwarfCode:39: warning: enclosing method fin has result type Unit: return value discarded
    } else return false
           ^DwarfCode:40: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  } else return false
                ^DwarfCode:40: warning: enclosing method fin has result type Unit: return value discarded
  } else return false
         ^